--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "lodash": "~4.6.1",
     "socket.io-client": "~1.4.5",
-    "interactivesolutions/ts-stdlib": "ts-stdlib#~1.0.0"
+    "interactivesolutions-ts-stdlib": "^1.0.2"
+  },
+  "devDependencies": {
+    "mocha": "~2.4.5"
   }
 }
