--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-tslint": "^4.3.3",
     "gulp-typings": "^1.3.0",
     "run-sequence": "^1.1.5",
-    "typescript": "^1.8.9"
+    "typescript": "^1.8.9",
+    "mocha-teamcity-reporter": ">=0.0.1"
   },
   "scripts": {
     "install": "gulp compile:typescript",
