--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "js-hermes-client",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "dist/hermes-client.js",
   "authors": [
     "Erik Norgren <erik.norgren@interactivesolutions.se>"
   ],
